Best practices changes
I cleaned a bit of the code changing it a bit. Made a few constants and better use of functions from stream. I removed a few lambdas because they were unnecesary. Also I removed a blank test class that was doing nothing.