@@ -12,50 +12,53 @@ import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class ExceptionHandlerController {
 
+    public static final String ERROR = "error";
+    public static final String TIME_STAMP = "timestamp";
+    public static final String MESSAGE = "message";
+
     @ExceptionHandler(PersonNotFoundException.class)
-    public ResponseEntity<?> personNotFound(PersonNotFoundException ex){
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", ex.getMessage(), "timestamp", Instant.now().toString()));
+    public ResponseEntity<Map<String, Object>> personNotFound(PersonNotFoundException ex){
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(ERROR, ex.getMessage(), TIME_STAMP, Instant.now().toString()));
     }
 
     @ExceptionHandler(WalletNotFoundException.class)
-    public ResponseEntity<?> walletNotFound(WalletNotFoundException ex){
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", ex.getMessage(), "timestamp", Instant.now().toString()));
+    public ResponseEntity<Map<String, Object>> walletNotFound(WalletNotFoundException ex){
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(ERROR, ex.getMessage(), TIME_STAMP, Instant.now().toString()));
     }
 
     @ExceptionHandler(DuplicatedPersonException.class)
     public ResponseEntity<Map<String, Object>> duplicatedPerson(DuplicatedPersonException ex) {
         Map<String, Object> error = new HashMap<>();
-        error.put("error", "Duplicated person conflict");
-        error.put("message", ex.getMessage());
+        error.put(ERROR, "Duplicated person conflict");
+        error.put(MESSAGE, ex.getMessage());
         return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
     }
 
     @ExceptionHandler(DuplicatedWalletException.class)
     public ResponseEntity<Map<String, Object>> duplicatedWallet(DuplicatedWalletException ex){
         Map<String, Object> error = new HashMap<>();
-        error.put("error", "Duplicated wallet conflict");
-        error.put("message", ex.getMessage());
+        error.put(ERROR, "Duplicated wallet conflict");
+        error.put(MESSAGE, ex.getMessage());
         return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
     }
 
     @ExceptionHandler(DollarNotFoundException.class)
     public ResponseEntity<Map<String, Object>> handleDollarNotFound(DollarNotFoundException ex) {
         Map<String, Object> error = new HashMap<>();
-        error.put("timestamp", LocalDateTime.now());
+        error.put(TIME_STAMP, LocalDateTime.now());
         error.put("status", HttpStatus.NOT_FOUND.value());
-        error.put("error", "Not Found");
-        error.put("message", ex.getMessage());
+        error.put(ERROR, "Not Found");
+        error.put(MESSAGE, ex.getMessage());
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<?> internalServerException(Exception ex){
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("error", ex.getMessage(), "timestamp", Instant.now().toString()));
+    public ResponseEntity<Map<String, Object>> internalServerException(Exception ex){
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of(ERROR, ex.getMessage(), TIME_STAMP, Instant.now().toString()));
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
@@ -68,14 +71,14 @@ public class ExceptionHandlerController {
                     Map<String, String> e = new HashMap<>();
                     e.put("field", error.getField());
                     e.put("rejectedValue", String.valueOf(error.getRejectedValue()));
-                    e.put("message", error.getDefaultMessage());
+                    e.put(MESSAGE, error.getDefaultMessage());
                     return e;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // Construct response
         Map<String, Object> response = new HashMap<>();
-        response.put("timestamp", Instant.now().toString());
+        response.put(TIME_STAMP, Instant.now().toString());
         response.put("status", HttpStatus.BAD_REQUEST.value());
         response.put("errors", errors);
 
